# clean-imports

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
clean_imports/: fixed_walker.py  imports.py  pathlib_walker.py
test/: conftest.py  test_ast.py
