[tool.poetry]
name = "clean-imports"
version = "0.1.0"
description = ""
authors = ["Pieter Marsman <pietermarsman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
